<resources>
    <string name="app_name">Notepad</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="no_categories">No Categories Yet</string>
    <string name="action_settings">Settings</string>
    <string name="menu_insert">Add Item</string>
    <string name="note_menu_delete">Delete Note</string>
    <string name="note_menu_edit">Edit Note</string>
    <string name="cat_menu_delete">Delete Category</string>
    <string name="cat_menu_edit">Edit Category</string>
    <string name="menu_send_mail">Send Mail</string>
    <string name="menu_send_sms">Send SMS</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="no_category">No Category</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_category">Edit Category</string>
    <string name="title_activity_create_note">Add Note</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="title_activity_notes_list">Notes</string>
    <string name="title_activity_categories_list">Categories</string>
    <string name="id">ID</string>
    <string name="send_mail_method">MAIL</string>
    <string name="send_sms_method">SMS</string>
    <string name="order_by_title">Order by</string>
    <string name="order_title">Title</string>
    <string name="order_category">Category</string>
    <string name="filter_title">Filter by Category</string>
    <string name="remove_filter_button">Remove Filter</string>
    <string name="error_title">Error</string>
    <string name="title_error_msg">Title might be incorrect, make sure it\'s not empty and that it contains at least one character</string>
    <string name="name_error_msg">Name might be incorrect, make sure it\'s not empty and that it contains at least one character</string>
</resources>
